--- a/blog/templates/blog/beforeloginhome.html
+++ b/blog/templates/blog/beforeloginhome.html
@@ -48,7 +48,7 @@
           <li><a href="{%url 'blog-about'%}">About Us</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#team">Team</a></li>
-          	
+            
           <li><a href="{%url 'login'%}">Login</a></li>
           <li><a href="{%url 'register'%}">Register</a></li>
 
@@ -126,63 +126,51 @@
     </section><!-- End Why Us Section -->
 
 
-  	<!-- ======= Clients Section ======= -->
+    <!-- ======= Clients Section ======= -->
     <section id="clients" class="section-bg">
 
       <div class="container">
 
         <div class="section-header">
           <h3>Top Trending Projects</h3>
-          <p>Look at some auspicious and quality projects , offered by the students.</p>
+          <p>Look at some auspicious and quality projects , offered and completed by the students.</p>
         </div>
 
         <div class="row no-gutters clients-wrap clearfix wow fadeInUp">
 
-          <div class="col-lg-3 col-md-4 col-xs-6">
+          <div class="col-lg-4 col-md-4 col-xs-6">
             <div class="client-logo">
               <img src="{%static 'blog/images/img/clients/client-1.png'%}" class="img-fluid" alt="">
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4 col-xs-6">
+          <div class="col-lg-4 col-md-4 col-xs-6">
             <div class="client-logo">
               <img src="{%static 'blog/images/img/clients/client-2.png'%}" class="img-fluid" alt="">
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4 col-xs-6">
+          <div class="col-lg-4 col-md-4 col-xs-6">
             <div class="client-logo">
               <img src="{%static 'blog/images/img/clients/client-3.png'%}" class="img-fluid" alt="">
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4 col-xs-6">
+          <div class="col-lg-4 col-md-4 col-xs-6">
             <div class="client-logo">
               <img src="{%static 'blog/images/img/clients/client-4.png'%}" class="img-fluid" alt="">
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4 col-xs-6">
+          <div class="col-lg-4 col-md-4 col-xs-6">
             <div class="client-logo">
               <img src="{%static 'blog/images/img/clients/client-5.png'%}" class="img-fluid" alt="">
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4 col-xs-6">
+          <div class="col-lg-4 col-md-4 col-xs-6">
             <div class="client-logo">
               <img src="{%static 'blog/images/img/clients/client-6.png'%}" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-xs-6">
-            <div class="client-logo">
-              <img src="{%static 'blog/images/img/clients/client-7.png'%}" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-xs-6">
-            <div class="client-logo">
-              <img src="{%static 'blog/images/img/clients/client-8.png'%}" class="img-fluid" alt="">
             </div>
           </div>
 
@@ -206,45 +194,30 @@
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="ion-ios-analytics-outline" style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4 class="title">Student Oriented</h4>
+              <p class="description">Here, at Peerwork, all the projects are exlusively available only for students.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="ion-ios-bookmarks-outline" style="color: #e9bf06;"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <h4 class="title">Project Aid</h4>
+              <p class="description">A student, and only a student, can ask from other students to help in their projects.  </p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="ion-ios-paper-outline" style="color: #3fcdc7;"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <h4 class="title">Less Competition</h4>
+              <p class="description">At Peerwork, you can collab and work other amazing like-minded students with very less competition from the other platforms.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="ion-ios-speedometer-outline" style="color:#41cf2e;"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
-            <div class="box">
-              <div class="icon"><i class="ion-ios-world-outline" style="color: #d6ff22;"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
-            <div class="box">
-              <div class="icon"><i class="ion-ios-clock-outline" style="color: #4680ff;"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <h4 class="title">Learning Oppurtunity</h4>
+              <p class="description">By working with other students, not only you will earn money but also will have a great learning chance without any much need of outsourcing.</p>
             </div>
           </div>
 
@@ -420,12 +393,6 @@
             </div>
 
           </div>
-
-          <div class="col-lg-3 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna veniam enim veniam illum dolore legam minim quorum culpa amet magna export quem marada parida nodela caramase seza.</p>
-          </div>
-
         </div>
       </div>
     </div>
